# cligame

./: CLAUDE.md  requirements.txt
Assets/: CourseLine.cs  Testing.cs
Assets/Prefabs/: HorizontalLine.prefab  Ship.prefab  VerticalLine.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: ActionsQueue.cs  BackgroundGrid.cs  GameDisplayer.cs  HttpApi.cs  ServerPinger.cs  Ship.cs
ProjectSettings/: ProjectSettings.asset
backend/api/: models.py
backend/api/management/commands/: setup_miner.py
backend/api/migrations/: 0001_initial.py  0002_resourcetype_part_stats_job_conduit.py
frontend/: pyproject.toml
frontend/src/spacegame/: api.py  cli.py
